@@ -13,6 +13,7 @@
 
 
 require_once('pre.php');
+require_once('note.php');
 require_once('common/tracker/Artifact.class');
 require_once('common/tracker/ArtifactFile.class');
 require_once('www/tracker/include/ArtifactFileHtml.class');
